fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  border: .3px solid red;
+}
+body{
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
 }
 .container {
   height: 100vh;
@@ -219,13 +225,14 @@
   text-align: left;
   flex-direction: column;
   height: 50vh;
-  width: 100%;
+  width: 80%;
   position: relative;
   top: 20%;
-  left: 20%;
+  left: 10%;
   justify-content: space-evenly;
   position: absolute;
   z-index: 3;
+  overflow: hidden;
 }
 h1:first-letter {
   color: #ff00df;
@@ -283,8 +290,13 @@ h3:first-letter {
 .insta:hover {
   stroke: #951C5D;
 }
-@media only screen and (min-width: 1200px){
+@media screen and (min-width: 1200px){
   .hero{
     font-size: 250%;
+  }
+  body{
+    overflow: hidden;
+    height: 100vh;
+    width: 100%;
   }
 }
